<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/F360">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/corporate"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textColor="@color/Ivory"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/today"
        android:id="@+id/textView3"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginStart="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/running"
        android:id="@+id/textView4"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total"
        android:id="@+id/textView5"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ywc"
        android:id="@+id/textView6"
        android:textStyle="bold"
        android:textColor="@color/Ivory"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total"
        android:id="@+id/textView7"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView9"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/today"
        android:id="@+id/textView8"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/running"
        android:id="@+id/textView9"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView8"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mlm_f"
        android:id="@+id/textView10"
        android:textStyle="bold"
        android:textColor="@color/Ivory"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/running"
        android:id="@+id/textView11"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView12"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/today"
        android:id="@+id/textView12"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total"
        android:id="@+id/textView13"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView11"
        android:layout_alignEnd="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mlm_i"
        android:id="@+id/textView14"
        android:textStyle="bold"
        android:textColor="@color/Ivory"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/today"
        android:id="@+id/textView15"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView14"
        android:layout_alignEnd="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/running"
        android:id="@+id/textView16"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView15"
        android:layout_alignEnd="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total"
        android:id="@+id/textView17"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView16"
        android:layout_alignEnd="@+id/textView16" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh"
        android:drawableLeft="@drawable/refresh"
        android:background="@null"
        android:layout_below="@+id/textView17"
        android:layout_alignParentEnd="true"
        android:onClick="refreshClicked"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/update"
        android:id="@+id/lblUpdate"
        android:layout_alignBottom="@+id/refresh"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Ivory"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:id="@+id/lblDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/Ivory" />

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textClock"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/lblDate"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtCorpoToday1"
        android:layout_above="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:textColor="@color/Ivory"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtCorpoRunning1"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtCorpoTotal1"
        android:textColor="@color/Ivory"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtYWCToday1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_below="@+id/textView6"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtMLMFToday1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_below="@+id/textView10"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtMLMIToday1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_below="@+id/textView14"
        android:layout_toEndOf="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtMLMFRunning1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_below="@+id/textView12"
        android:layout_toEndOf="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtMLMIRunning1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_below="@+id/txtMLMIToday1"
        android:layout_toEndOf="@+id/textView16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtYWCRunning1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_alignTop="@+id/textView9"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtYWCTotal1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_below="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtMLMFTotal1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignEnd="@+id/txtMLMFRunning1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_value"
        android:id="@+id/txtMLMITotal1"
        android:textColor="@color/Ivory"
        android:textStyle="italic"
        android:layout_alignTop="@+id/textView17"
        android:layout_alignEnd="@+id/txtMLMIRunning1" />

</RelativeLayout>